--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -2,7 +2,7 @@
     <h3 class="font-weight-bold p-3">レシピ新規登録</h3>
     <%= render 'layouts/errors', obj:  @recipe %>
     <%= form_with model: @recipe, url: recipes_path(@recipe), method: :post, local: true do |f| %>
-        <%= render 'form', f: f %>
+        <%= render 'form', f: f, recipe: @recipe %>
         <div class="text-center">
             <%= f.submit "レシピを作成する", class: "btn btn-success" %>
         </div>
