--- a/app/views/menus/index.html.erb
+++ b/app/views/menus/index.html.erb
@@ -1,20 +1,8 @@
 <div class="container p-5">
 	<h2 class="section-top"><span aria-hidden="true"></span> 献立予定</h2>
 	<div class ="row">
-	  <div class="col-md-12 col-sm-12 col-xs-12">
-  		<%= month_calendar events: @menus do |date, menus| %>
-  		  <%= date.day %>
-
-  		  <% menus.each do |menu| %>
-  		  	<div class ="row">
-  		  		<%= link_to user_menu_path(current_user.id, menu.id) do %>
-	    		    <p><%= menu.recipe.recipe_name %></br>
-	    		      <%= image_tag menu.recipe.get_image(50, 50) %>
-	    		    </p>
-	    		  <% end %>
-	    		</div>
-  		  <% end %>
-  		<% end %>
+	  <div class="col-md-12 col-sm-12 col-xs-12", id ="month_index">
+  		<%= render 'month_index', menus: @menus %>
     </div>
 	</div>
 	<%= render 'layouts/errors', obj: @menu %>
