--- a/app/views/comments/_comments.html.erb
+++ b/app/views/comments/_comments.html.erb
@@ -5,14 +5,14 @@
     <tbody>
       <% @comments.each do |comment| %>
         <tr>
-            <td>
-                <%= link_to user_path(comment.user.id) do %>
-                    <%= comment.user.name %>
-                <% end %>
-            </td>
+          <td>
+            <%= link_to user_path(comment.user.id) do %>
+                <%= comment.user.name %>
+            <% end %>
+          </td>
           <td style="width: 70%"><%= comment.content %></td>
           <% if comment.user == current_user %>
-            <td><%= link_to '削除', recipe_comment_path(comment.recipe.id, comment.id), method: :delete, local: true, class: 'btn btn-sm btn-danger' %></td>
+            <td><%= link_to '削除', recipe_comment_path(comment.recipe.id, comment.id), method: :delete, remote: true, class: 'btn btn-sm btn-danger' %></td>
           <% end %>
         </tr>
       <% end %>
