[Fix]マイリスト検索エラー修正

--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -11,6 +11,15 @@
             <i class="fas fa-search"></i>
           <% end %>
       <% end %>
+      <%= form_tag user_lists_path(current_user.id), method: :get, class: 'boards__searchForm' do %>
+        <%= select_tag :tag_id,
+           options_from_collection_for_select(Tag.all, :id, :tag_name, params[:tag_id]),
+           {
+             prompt: 'タグで絞り込み検索',
+             onchange: 'submit(this.form);'
+           }
+        %>
+      <% end %>
       <div class="row">
         <% @lists.each do |list| %>
           <div class="card border-light m-2">
@@ -18,11 +27,26 @@
               <%= image_tag list.recipe.get_image(300, 300) ,class: "shadow mb-5 bg-body round" %>
             <% end %>
             <div class="card-body">
-              <h5 class="card-title">レシピ名：<%= list.recipe.recipe_name %></h5>
-              <p class="card-text"><%= list.recipe.point %></p>
-              <p class="card-text">制作者：<%= list.recipe.user.name %></p>
+              <h4 class="card-title font-weight-bold text-warning"><%= list.recipe.recipe_name %></h4>
+                <div class = "d-flex flex-wrap">
+                  <% list.recipe.tags.each do |tag| %>
+                      <%= link_to recipes_path(tag_id: tag.id) do %>
+                          <p><%= tag.tag_name %></p>
+                      <% end %>
+                  <% end %>
+                </div>
+                <p class="card-text">
+                  <i class="fas fa-heart" aria-hidden="true" style="color: red;"></i>
+                  <%= list.recipe.favorites.count %> いいね
+                </p>
+                <p class="card-text">
+                  by
+                  <%= link_to user_path(list.recipe.user) do %>
+                    <%= list.recipe.user.name %>
+                  <% end %>
+                </p>
+                <p class="card-text"><%= link_to 'マイリストから外す', user_list_path(list.recipe.id, list), method: :delete, class: 'btn btn-danger btn-sm' %></p>
             </div>
-            <%= link_to 'マイリストから外す', user_list_path(list.recipe.id, list), method: :delete, class: 'btn btn-danger btn-sm' %>
           </div>
         <% end %>
       </div>
