--- a/app/views/menus/destroy.js.erb
+++ b/app/views/menus/destroy.js.erb
@@ -1,1 +1,2 @@
 $('#week_index').html("<%= j(render "week_index", menus: @menus) %>");
+$('#month_index').html("<%= j(render "month_index", menus: @menus) %>");
