--- a/app/views/menus/new.html.erb
+++ b/app/views/menus/new.html.erb
@@ -14,4 +14,7 @@
 	    <%= render 'mylists' %>
 	  </div>
 	</div>
+	<div class ="text-center">
+	  <%= link_to '一ヶ月の予定', user_menus_path(current_user.id), class: 'btn btn-success' %>
+	</div>
 </div>
