--- a/app/views/menus/_month_index.html.erb
+++ b/app/views/menus/_month_index.html.erb
@@ -3,11 +3,14 @@
 
   <% menus.each do |menu| %>
   	<div class ="row">
-  		<%= link_to user_menu_path(current_user.id, menu.id) do %>
-		    <p><%= menu.recipe.recipe_name %></br>
-		      <%= image_tag menu.recipe.get_image(50, 50) %>
-		    </p>
-		  <% end %>
+  		<ul>
+  			<%= link_to user_menu_path(current_user.id, menu.id) do %>
+			    <li>
+			    	<%= menu.recipe.recipe_name %>
+			    	<%= link_to '削除', user_menu_path(current_user.id, menu.id), method: :delete, remote: true, class: 'btn btn-danger btn-sm' %>
+			    </li>
+			  <% end %>
+  		</ul>
 		</div>
   <% end %>
 <% end %>
