--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -20,37 +20,7 @@
            }
         %>
       <% end %>
-      <div class="row">
-        <% @lists.each do |list| %>
-          <div class="card border-light m-2">
-            <%= link_to recipe_path(list.recipe) do %>
-              <%= image_tag list.recipe.get_image(300, 300) ,class: "shadow mb-5 bg-body round" %>
-            <% end %>
-            <div class="card-body">
-              <h4 class="card-title font-weight-bold text-warning"><%= list.recipe.recipe_name %></h4>
-                <div class = "d-flex flex-wrap">
-                  <% list.recipe.tags.each do |tag| %>
-                      <%= link_to recipes_path(tag_id: tag.id) do %>
-                          <p><%= tag.tag_name %></p>
-                      <% end %>
-                  <% end %>
-                </div>
-                <p class="card-text">
-                  <i class="fas fa-heart" aria-hidden="true" style="color: red;"></i>
-                  <%= list.recipe.favorites.count %> いいね
-                </p>
-                <p class="card-text">
-                  by
-                  <%= link_to user_path(list.recipe.user) do %>
-                    <%= list.recipe.user.name %>
-                  <% end %>
-                </p>
-                <p class="card-text"><%= link_to 'マイリストから外す', user_list_path(list.recipe.id, list), method: :delete, class: 'btn btn-danger btn-sm' %></p>
-            </div>
-          </div>
-        <% end %>
-      </div>
-    </div>
+    <%= render 'index', lists: @lists %>
     <div class="offset-md-5 mt-5">
       <%= paginate @lists, theme: 'twitter-bootstrap-4' %>
     </div>
