--- a/app/views/recipes/edit.html.erb
+++ b/app/views/recipes/edit.html.erb
@@ -2,7 +2,7 @@
     <h3 class="font-weight-bold p-3">レシピ編集</h3>
     <%= render 'layouts/errors', obj:  @recipe %>
     <%= form_with model: @recipe, url: recipe_path(@recipe), method: :patch, local: true do |f| %>
-        <%= render 'form', f: f %>
+        <%= render 'form', f: f, recipe: @recipe %>
         <div class="text-center">
             <%= f.submit "レシピを更新する", class: "btn btn-success" %>
         </div>
