--- a/app/views/users/recipes.html.erb
+++ b/app/views/users/recipes.html.erb
@@ -20,32 +20,7 @@
            }
         %>
       <% end %>
-      <div class="row">
-        <% @recipes.each do |recipe| %>
-        <div class ="col-md-4">
-          <div class="card border-light m-1 h-300", style= "width: 300px">
-            <%= link_to recipe_path(recipe) do %>
-              <%= image_tag recipe.get_image(300, 300) ,class: "shadow mb-5 bg-body round" %>
-            <% end %>
-            <div class="card-body">
-              <h4 class="card-title font-weight-bold text-warning"><%= recipe.recipe_name %></h4>
-              <div class = "d-flex flex-wrap">
-                <% recipe.tags.each do |tag| %>
-                    <%= link_to recipes_path(tag_id: tag.id) do %>
-                        <p><%= tag.tag_name %></p>
-                    <% end %>
-                <% end %>
-              </div>
-              <p class="card-text">
-                <i class="fas fa-heart" aria-hidden="true" style="color: red;"></i>
-                <%= recipe.favorites.count %> いいね
-              </p>
-            </div>
-          </div>
-        </div>
-        <% end %>
-      </div>
-    </div>
+    <%= render 'recipes/index', recipes: @recipes %>
     <div class="offset-md-4 mt-5">
       <%= paginate @recipes, theme: 'twitter-bootstrap-4' %>
     </div>
