--- a/app/views/favorites/favorites.html.erb
+++ b/app/views/favorites/favorites.html.erb
@@ -1,8 +1,8 @@
-<div class ="container p-5">
+<div class ="three-container p-5">
   <div class ="row">
     <div class ="col-md-11 offset-md-1">
       <div class="row ml-3">
-        <h3 class="font-weight-bold">いいねしたレシピ一覧</h3>
+        <h3 class="font-weight-bold"><%= @user.name %>さんがいいねしたレシピ一覧</h3>
         <p class="p-2">(全<%= @favorites.total_count %>件）<p>
       </div>
       <% if user_signed_in? %>
@@ -14,11 +14,20 @@
             <i class="fas fa-search"></i>
           <% end %>
       <% end %>
-      <%= form_tag recipes_path, method: :get, class: 'boards__searchForm' do %>
+      <%= form_tag favorites_users_path(@user), method: :get, class: 'boards__searchForm' do %>
         <%= select_tag :tag_id,
            options_from_collection_for_select(Tag.all, :id, :tag_name, params[:tag_id]),
            {
              prompt: 'タグで絞り込み検索',
+             onchange: 'submit(this.form);'
+           }
+        %>
+      <% end %>
+      <%= form_tag favorites_users_path(@user), method: :get, class: 'boards__searchForm' do %>
+        <%= select_tag :food_id,
+           options_from_collection_for_select(Food.all, :id, :food_name, params[:food_id]),
+           {
+             prompt: '材料名で絞り込み検索',
              onchange: 'submit(this.form);'
            }
         %>
