--- a/app/views/recipes/_step_fields.html.erb
+++ b/app/views/recipes/_step_fields.html.erb
@@ -1,5 +1,5 @@
 <div class="nested-fields">
-  <div class = "card h-300 w-30">
+  <div class = "card h-300">
     <div id ="preview_card" class="preview_card">
       <% if f.object.image.attached? == true %>
         <%= image_tag f.object.get_image(200, 200) %>
