--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -1,4 +1,4 @@
-<div class='container p-5'>
+<div class='three-container p-5'>
   <div class='row'>
     <div class = "mx-auto", style="width: 75%;">
       <div class ="row">
