--- a/app/views/lists/_list_btn.html.erb
+++ b/app/views/lists/_list_btn.html.erb
@@ -1,5 +1,7 @@
-<% if recipe.listed_by?(current_user) %>
-  <%= link_to 'マイリストから外す', user_list_path(current_user.id, recipe_id: recipe.id, id: List.where(user_id: current_user.id, recipe_id: recipe.id )), method: :delete, class: 'btn btn-dark btn-sm' %>
-<% else %>
-  <%= link_to 'マイリストに追加する', user_lists_path(current_user.id, recipe_id: recipe.id), method: :post, class: 'btn btn-info btn-sm' %>
+<% if user_signed_in? %>
+  <% if recipe.listed_by?(current_user) %>
+    <%= link_to 'マイリストから外す', user_list_path(current_user.id, recipe_id: recipe.id, id: List.where(user_id: current_user.id, recipe_id: recipe.id )), method: :delete, class: 'btn btn-dark btn-sm' %>
+  <% else %>
+    <%= link_to 'マイリストに追加する', user_lists_path(current_user.id, recipe_id: recipe.id), method: :post, class: 'btn btn-info btn-sm' %>
+  <% end %>
 <% end %>
