--- a/app/views/menus/index.html.erb
+++ b/app/views/menus/index.html.erb
@@ -1,20 +1,21 @@
-<div class="container p-5">
-	<h2 class="section-top"><span aria-hidden="true"></span> 献立予定</h2>
+<div class="two-container p-5">
+	<h1 class="card-title-top font-weight-bold">Menu Schedule</h1>
 	<div class ="row">
-	  <div class="col-md-12 col-sm-12 col-xs-12", id ="month_index">
+	  <div class="col-md-12 col-lg-12", id ="month_index">
   		<%= render 'month_index', menus: @menus %>
     </div>
 	</div>
 	<%= render 'layouts/errors', obj: @menu %>
 	<div class ="row">
-	  <div class ="col-md-3", id= "menu_form">
+	  <div class ="col-lg-3 col-md-5", id= "menu_form">
 	    <%= render 'menu_form', menu: @menu %>
 	  </div>
-	  <div class ="col-md-8 offset-md-1">
+	  <div class ="col-lg-8 col-md-6 offset-md-1">
 	    <%= render 'mylists' %>
 	  </div>
 	</div>
 	<div class ="text-center">
 	  <%= link_to '一週間の予定', new_user_menu_path(current_user.id), class: 'btn btn-success' %>
 	</div>
+	<div class ="row p-5"></div>
 </div>
