--- a/app/views/menus/new.html.erb
+++ b/app/views/menus/new.html.erb
@@ -1,5 +1,5 @@
-<div class="container p-5">
-	<h2 class="section-top"><span aria-hidden="true"></span> 一週間の献立</h2>
+<div class="two-container p-5">
+	<h1 class="card-title-top font-weight-bold">Weekly menu schedule</h1>
 	<div class ="row">
 	  <div class="col-md-12 col-sm-12 col-xs-12", id ="week_index">
   		<%= render 'week_index', menus: @menus %>
@@ -7,10 +7,10 @@
 	</div>
 	<%= render 'layouts/errors', obj: @menu %>
 	<div class ="row">
-	  <div class ="col-md-3">
+	  <div class ="col-md-3 col-sm-3 col-xs-3">
 	    <%= render 'menu_form', menu: @menu %>
 	  </div>
-	  <div class ="col-md-8 offset-md-1">
+	  <div class ="col-md-9 col-sm-9 col-xs-9">
 	    <%= render 'mylists' %>
 	  </div>
 	</div>
