--- a/app/views/recipes/edit.html.erb
+++ b/app/views/recipes/edit.html.erb
@@ -1,5 +1,5 @@
-<div class = "container p-5">
-    <h3 class="font-weight-bold p-3">レシピ編集</h3>
+<div class = "three-container p-5">
+    <h1 class="card-title-top font-weight-bold">Recipe editing</h1>
     <%= render 'layouts/errors', obj:  @recipe %>
     <%= form_with model: @recipe, url: recipe_path(@recipe), method: :patch, local: true do |f| %>
         <%= render 'form', f: f, recipe: @recipe %>
@@ -7,4 +7,5 @@
             <%= f.submit "レシピを更新する", class: "btn btn-success" %>
         </div>
     <% end %>
+    <div class ="row p-5"></div>
 </div>
