--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,5 +1,5 @@
-<div class = "container p-5">
-    <h3 class="font-weight-bold p-3">レシピ新規登録</h3>
+<div class = "one-container p-5">
+    <h1 class="card-title-top font-weight-bold">New recipe registration</h1>
     <%= render 'layouts/errors', obj:  @recipe %>
     <%= form_with model: @recipe, url: recipes_path(@recipe), method: :post, local: true do |f| %>
         <%= render 'form', f: f, recipe: @recipe %>
@@ -7,4 +7,5 @@
             <%= f.submit "レシピを作成する", class: "btn btn-success" %>
         </div>
     <% end %>
+    <div class ="row p-5"></div>
 </div>
